before make new SeqFrame package, all working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,21 +4,22 @@ export("[.appspace")
 export("[<-.appspace")
 export(.AppEnv)
 export(Clover)
+export(SeqFrame)
+export(SeqFrame.table)
 export(appspace)
 export(check.channels)
 export(delete.node)
 export(df2sf)
 export(file2sf)
+export(flowFrame2SeqFrame)
 export(insert.node)
 export(select.all.child.node)
 export(select.channels)
 export(select.parent.node)
 export(selected.node)
-export(seqFrame)
-export(seqFrame.table)
 export(split)
 export(veggie)
-exportClasses(seqFrame)
+exportClasses(SeqFrame)
 exportMethods("annotation<-")
 exportMethods(annotation)
 import(Biobase)
