after seperate SeqFrame

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,26 +4,18 @@ export("[.appspace")
 export("[<-.appspace")
 export(.AppEnv)
 export(Clover)
-export(SeqFrame)
-export(SeqFrame.table)
 export(appspace)
 export(check.channels)
 export(delete.node)
-export(df2sf)
-export(file2sf)
-export(flowFrame2SeqFrame)
 export(insert.node)
 export(select.all.child.node)
 export(select.channels)
 export(select.parent.node)
 export(selected.node)
-export(split)
-export(veggie)
-exportClasses(SeqFrame)
-exportMethods("annotation<-")
-exportMethods(annotation)
 import(Biobase)
 import(RGtk2)
+import(SeqData)
+import(SeqFrame)
 import(flowCore)
 import(flowStats)
 import(flowViz)
