--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,13 @@ export(appspace)
 export(check.channels)
 export(delete.node)
 export(insert.node)
+export(sample.df)
 export(select.all.child.node)
 export(select.channels)
 export(select.parent.node)
+export(selected.method)
 export(selected.node)
+export(update.table.view)
 import(Biobase)
 import(RGtk2)
 import(SeqData)
